Fix tootlip on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+@media (max-width: 830px) {
+  .tooltip {
+    display: none !important;
+  }
+}
 :root, .theme-dark {
   --global-white: #fff;
   --global-black: #000;
